# zvec-ruby

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Gemfile  LICENSE.txt  README.md  Rakefile  brew_plan.md  index.html  mkdocs.yml  sitemap.xml  zvec.gemspec
.github/workflows/: deploy-github-pages.yml
Formula/: zvec.rb
api/: index.html
api/collection/: index.html
api/collection-options/: index.html
api/collection-schema/: index.html
api/doc/: index.html
api/enums/: index.html
api/field-schema/: index.html
api/global-config/: index.html
api/index-params/: index.html
api/query-params/: index.html
api/status-and-errors/: index.html
api/vector-query/: index.html
architecture/: index.html
architecture/build-system/: index.html
architecture/native-extension/: index.html
docs/: index.md
docs/api/: collection-options.md  collection-schema.md  collection.md  doc.md  enums.md  field-schema.md  global-config.md  index-params.md  index.md  query-params.md  status-and-errors.md  vector-query.md
docs/architecture/: build-system.md  index.md  native-extension.md
docs/assets/css/: custom.css
docs/examples/: basic-usage.md  index.md  semantic-search.md
docs/getting-started/: index.md  installation.md  prerequisites.md  quick-start.md
docs/guides/: collections.md  configuration.md  documents.md  error-handling.md  filtered-queries.md  index-tuning.md  index.md  schemas-and-fields.md  vector-search.md
examples/: 01_basic_usage.rb  02_semantic_search.rb  index.html
examples/basic-usage/: index.html
examples/docs/: cooking_pasta.md  http_protocol.md  machine_learning.md  ruby_basics.md  solar_system.md
examples/semantic-search/: index.html
ext/: CMakeLists.txt  CMakePresets.json  cmake
ext/zvec/: zvec_collection.cpp  zvec_common.hpp  zvec_config.cpp  zvec_doc.cpp  zvec_ext.cpp  zvec_ext.hpp  zvec_params.cpp  zvec_schema.cpp  zvec_status.cpp  zvec_types.cpp
getting-started/: index.html
getting-started/installation/: index.html
getting-started/prerequisites/: index.html
getting-started/quick-start/: index.html
guides/: index.html
guides/collections/: index.html
guides/configuration/: index.html
guides/documents/: index.html
guides/error-handling/: index.html
guides/filtered-queries/: index.html
guides/index-tuning/: index.html
guides/schemas-and-fields/: index.html
guides/vector-search/: index.html
lib/: zvec.rb
lib/zvec/: collection.rb  doc.rb  version.rb
search/: search_index.json
sig/: zvec.rbs
test/: test_collection.rb  test_doc.rb  test_helper.rb  test_params.rb  test_schema.rb  test_status.rb  test_types.rb  test_zvec.rb
